# kokkos-kernels

./: .git-blame-ignore-revs  .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CheckHostBlasReturnComplex.cmake  Copyright.txt  KokkosKernels_dummy.cpp  LICENSE  Makefile.kokkos-kernels  README  README.md  cm_generate_makefile.bash  master_history.txt
docs/: CMakeLists.txt  Doxyfile.in  Makefile  api_template.rst  build_requirements.txt  conf.py  index.rst
docs/developer/: contrib.rst  index.rst  profiling.rst  testing_table.rst
docs/source/: building.rst  edit_button_handler.py
example/: CMakeLists.txt  Makefile
example/batched_solve/: CMakeLists.txt  examples_helper.hpp  static_pivoting.cpp  team_GMRES.cpp
example/buildlib/: compileKokkosKernels-wcmclen.sh  compileKokkosKernels.sh
example/cmake/: README.md
example/fenl/: BoxElemFixture.hpp  BoxElemPart.cpp  BoxElemPart.hpp  CGSolve.hpp  HexElement.hpp  KokkosKernels_ETIMacros.hpp  TestFixture.cpp  TestFixture.hpp  VectorImport.hpp  WrapMPI.hpp  fenl.cpp  fenl.hpp  fenl_functors.hpp  fenl_impl.hpp  main.cpp
example/gmres/: BentPipe2D100.mtx  CMakeLists.txt  Create_Diag_Matrix.cpp  KokkosKernels_MatrixPrec.hpp  KokkosKernels_Preconditioner.hpp  KokkosSparse_MatrixPrec.hpp  KokkosSparse_Preconditioner.hpp  Laplace3D10.mtx  README.md  ex_cmplx_A.cpp  ex_real_A.cpp  gmres.hpp  test_cmplx_A.cpp  test_prec.cpp  test_real_A.cpp
example/graph/: KokkosKernels_CrsMatrix.hpp  KokkosKernels_Example_Distance2GraphColor.cpp  KokkosKernels_Parameters.hpp  KokkosKernels_StaticCrsGraph.hpp  PartitioningExample.cpp  README.md  graph.dot
example/half/: CMakeLists.txt  us-rse-escience-2022-reproducer.sh  xpy.cpp
example/hashmap_accumulator/: KokkosKernels_Example_HashmapAccumulator.cpp
example/static_pivoting/: CMakeLists.txt  example.cpp  examples_helper.hpp
example/wiki/: CMakeLists.txt
perf_test/ode/: CMakeLists.txt  KokkosODE_BDF.cpp  KokkosODE_RK.cpp
src/: CMakeLists.txt  KokkosBlas.hpp  KokkosBlas1_abs.hpp  KokkosBlas1_axpby.hpp  KokkosBlas1_dot.hpp  KokkosBlas1_mult.hpp  KokkosBlas1_nrm1.hpp  KokkosBlas1_nrm2.hpp  KokkosBlas1_nrm2_squared.hpp  KokkosBlas1_nrm2w.hpp  KokkosBlas1_nrm2w_squared.hpp  KokkosBlas1_nrminf.hpp  KokkosBlas1_reciprocal.hpp  KokkosBlas1_scal.hpp  KokkosBlas1_sum.hpp  KokkosBlas1_update.hpp  KokkosBlas2_gemv.hpp  KokkosKernels_Half.hpp  KokkosKernels_Macros.hpp  KokkosLinAlg_config.h  Kokkos_ArithTraits.hpp  Kokkos_Blas1_MV.hpp  Kokkos_HalfPrecision.hpp  Kokkos_InnerProductSpaceTraits.hpp  Kokkos_Sparse_CrsMatrix.hpp  Makefile  kokkoskernels_eti.cmake
src/batched/: KokkosBatched_AddRadial_Decl.hpp  KokkosBatched_AddRadial_Impl.hpp  KokkosBatched_AddRadial_Internal.hpp  KokkosBatched_ApplyGivens_Serial_Internal.hpp  KokkosBatched_ApplyHouseholder_Decl.hpp  KokkosBatched_ApplyHouseholder_Internal.hpp  KokkosBatched_ApplyHouseholder_Serial_Internal.hpp  KokkosBatched_ApplyPivot_Decl.hpp  KokkosBatched_ApplyPivot_Impl.hpp  KokkosBatched_ApplyPivot_Internal.hpp  KokkosBatched_ApplyQ_Serial_Internal.hpp  KokkosBatched_Copy_Decl.hpp  KokkosBatched_Copy_Impl.hpp  KokkosBatched_Copy_Internal.hpp  KokkosBatched_Eigendecomposition_Decl.hpp  KokkosBatched_Eigendecomposition_Serial_Impl.hpp  KokkosBatched_Eigendecomposition_Serial_Internal.hpp  KokkosBatched_Eigendecomposition_Team_Impl.hpp  KokkosBatched_Eigenvalue_Serial_Internal.hpp  KokkosBatched_FindAmax_Internal.hpp  KokkosBatched_Francis_Serial_Internal.hpp  KokkosBatched_Gemm_DblBuf_Impl.hpp  KokkosBatched_Gemm_Decl.hpp  KokkosBatched_Gemm_Handle.hpp  KokkosBatched_Gemm_Serial_Impl.hpp  KokkosBatched_Gemm_Serial_Internal.hpp  KokkosBatched_Gemm_Team_Impl.hpp  KokkosBatched_Gemm_Team_Internal.hpp  KokkosBatched_Gemv_Decl.hpp  KokkosBatched_Gemv_Serial_Impl.hpp  KokkosBatched_Gemv_Serial_Internal.hpp  KokkosBatched_Gemv_TeamVector_Internal.hpp  KokkosBatched_Gemv_Team_Impl.hpp  KokkosBatched_Gemv_Team_Internal.hpp  KokkosBatched_Givens_Serial_Internal.hpp  KokkosBatched_HessenbergFormQ_Serial_Internal.hpp  KokkosBatched_HessenbergQR_WithShift_Serial_Internal.hpp  KokkosBatched_HessenbergReduction_Serial_Internal.hpp  KokkosBatched_Hessenberg_Serial_Internal.hpp  KokkosBatched_Householder_Decl.hpp  (+70 more)
src/blas/: KokkosBlas.hpp  KokkosBlas1_abs.hpp  KokkosBlas1_axpby.hpp  KokkosBlas1_copy.hpp  KokkosBlas1_dot.hpp  KokkosBlas1_fill.hpp  KokkosBlas1_iamax.hpp  KokkosBlas1_mult.hpp  KokkosBlas1_nrm1.hpp  KokkosBlas1_nrm2.hpp  KokkosBlas1_nrm2_squared.hpp  KokkosBlas1_nrm2w.hpp  KokkosBlas1_nrm2w_squared.hpp  KokkosBlas1_nrminf.hpp  KokkosBlas1_reciprocal.hpp  KokkosBlas1_rotg.hpp  KokkosBlas1_scal.hpp  KokkosBlas1_serial_scal.hpp  KokkosBlas1_set.hpp  KokkosBlas1_sum.hpp  KokkosBlas1_team_abs.hpp  KokkosBlas1_team_axpby.hpp  KokkosBlas1_team_dot.hpp  KokkosBlas1_team_mult.hpp  KokkosBlas1_team_nrm2.hpp  KokkosBlas1_team_scal.hpp  KokkosBlas1_team_update.hpp  KokkosBlas1_update.hpp  KokkosBlas2_gemv.hpp  KokkosBlas2_serial_gemv.hpp  KokkosBlas2_team_gemv.hpp  KokkosBlas2_teamvector_gemv.hpp  KokkosBlas3_gemm.hpp  KokkosBlas3_trmm.hpp  KokkosBlas3_trsm.hpp  KokkosBlasLapack_trtri.hpp  KokkosBlas_execution_policy.hpp  KokkosBlas_geqrf.hpp  KokkosBlas_gesv.hpp  KokkosBlas_trtri.hpp  (+1 more)
src/cmake/: kokkoskernels_eti.cmake
src/common/: KokkosKernels_BitUtils.hpp  KokkosKernels_BlockHashmapAccumulator.hpp  KokkosKernels_BlockUtils.hpp  KokkosKernels_Controls.hpp  KokkosKernels_ExecSpaceUtils.hpp  KokkosKernels_Handle.hpp  KokkosKernels_HashmapAccumulator.hpp  KokkosKernels_IOUtils.hpp  KokkosKernels_MemSpaceUtils.hpp  KokkosKernels_PrintUtils.hpp  KokkosKernels_Serial_Limits.hpp  KokkosKernels_SimpleUtils.hpp  KokkosKernels_Sorting.hpp  KokkosKernels_SparseUtils.hpp  KokkosKernels_SparseUtils_cusparse.hpp  KokkosKernels_SparseUtils_mkl.hpp  KokkosKernels_SparseUtils_rocsparse.hpp  KokkosKernels_Uniform_Initialized_MemoryPool.hpp  KokkosKernels_Utils.hpp  KokkosKernels_VectorUtils.hpp  KokkosKernels_default_types.hpp  Kokkos_ArithTraits.hpp
src/dense/: KokkosDense_gesv.hpp
src/graph/: KokkosGraph_CoarsenConstruct.hpp  (+14 more)
(+14868 files in other folders)
